@@ -1,0 +1,7 @@
+TestCase("[Puzzle] setState", {
+
+    'test setState for empty state': function () {
+        assertEquals(undefined, this.presenter.setState(""));
+    }
+
+});
